@@ -98,6 +98,7 @@ elif [ "${version}" -ge 11 ] ; then
         --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
         --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
         --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
+        --add-opens=java.base/jdk.internal.access=ALL-UNNAMED \
         --illegal-access=permit \
         ${JVM_OPTS}"
 fi
